# junjo

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  AGENT_LAYER_PHASE_0.md  AGENT_LAYER_ROADMAP.md  AI_STUDIO_MIGRATION_NOTES.md  CHANGELOG.md  COMPREHENSIVE_REVIEW_FIX_PLAN.md  GRAPH_HARDENING.md  HARDENING_PLAN.md  MONOREPO_MIGRATION_PLAN.md  Makefile  PROTO_VERSIONS.md  README.md  RELEASE_POLICY.md  pyproject.toml
.github/: dependabot.yml  (+1 more)
examples/ai_chat/backend/: .env.example  .gitignore  main.py  pyproject.toml  pytest.ini
examples/ai_chat/backend/src/app/: main.py  otel_config.py  visualize.py
examples/ai_chat/backend/src/app/ai/gemini/: gemini_tool.py
examples/ai_chat/backend/src/app/ai_services/gemini/: gemini_tool.py
examples/ai_chat/backend/src/app/ai_services/grok/: __init__.py  grok_tool.py
examples/ai_chat/backend/src/app/avatar/: routes.py
examples/ai_chat/backend/src/app/chat_image/: routes.py
examples/ai_chat/backend/src/app/contact/: model.py  repository.py  routes.py  schemas.py
examples/ai_chat/backend/src/app/db/: db_config.py
examples/ai_chat/backend/src/app/db/partner/: model.py
examples/ai_chat/backend/src/app/util/: save_image_file.py
examples/ai_chat/backend/src/app/workflows/: routes.py
examples/ai_chat/backend/src/app/workflows/concurrent_sub_flow/: graph.py  store.py  sub_flow.py
examples/ai_chat/backend/src/app/workflows/contact_create/: prompt_gemini.py
examples/ai_chat/backend/src/app/workflows/create_contact/: graph.py  schemas.py  store.py  workflow.py
examples/ai_chat/backend/src/app/workflows/handle_message/: graph.py  store.py  workflow.py
examples/ai_chat/backend/src/app/workflows/message/: prompt_gemini.py  schemas.py  services.py
examples/ai_chat/backend/src/app/workflows/sub_sub_flow/: graph.py  state.py  store.py  sub_flow.py
examples/ai_chat/backend/src/app/workflows/test_sub_flow/: graph.py  sub_flow.py
examples/ai_chat/backend/src/app/workflows_basic/: routes.py
examples/ai_chat/backend/src/app/workflows_basic/contact_create/: schemas.py
examples/ai_chat/backend/src/app/workflows_basic/message/: prompt_gemini.py  services.py
examples/ai_chat/backend/src/app/workflows_junjo/: routes.py
examples/ai_chat/backend/src/app/workflows_junjo/concurrent_sub_flow/: graph.py  state.py  store.py  sub_flow.py
examples/ai_chat/backend/src/app/workflows_junjo/handle_message/: graph.py  schemas.py  store.py  workflow.py
examples/ai_chat/backend/src/app/workflows_junjo/sub_sub_flow/: graph.py  store.py  sub_flow.py
examples/ai_chat/backend/src/app/workflows_junjo/test_sub_flow/: graph.py  state.py  store.py  sub_flow.py
examples/base/: .env.example  README.md  main.py  pyproject.toml
examples/base/src/app/: main.py
examples/base/src/base/: gemini_tool.py  main.py  otel_config.py  store.py  visualize.py
examples/base/src/base/sample_workflow/: graph.py  hooks.py  store.py  workflow.py
examples/base/src/base/sample_workflow/nodes/add_ten_node/: node.py
examples/base/src/base/sample_workflow/sample_subflow/: graph.py  store.py  subflow.py
examples/dev/: __init__.py  main.py  pyproject.toml  store.py
sdks/python/: .dockerignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE_POLICY.md  pyproject.toml
sdks/python/docs/: README.md  agent_composition.rst  agent_testing.rst  agents.rst  api-public-surface.json  api-sphinx-baseline.json  api.rst  concurrency.rst  conf.py  core_concepts.rst  eval_driven_dev.rst  export_api.py  getting_started.rst  hooks.rst  index.rst  junjo_ai_studio.rst  opentelemetry.rst  requirements.txt  robots.txt  state_management.rst  subflows.rst  visualizing_workflows.rst
sdks/python/docs/content/docs/observability/: opentelemetry.md
sdks/python/docs/content/docs/python/: concepts.md  get-started.md  hooks.md  index.md  tutorial.md
sdks/python/examples/ai_chat/: .env.example  README.md  compose.yaml
sdks/python/examples/ai_chat/backend/: .env.example  .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml
sdks/python/examples/ai_chat/backend/tests/: conftest.py  test_adapters.py  test_api_and_lifespan.py  test_application_integration.py  test_eval_results.py  test_horizon_2_acceptance.py  test_hybrid_telemetry.py  test_provider_runtime.py  test_restored_product_workflows.py
sdks/python/examples/ai_chat/frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
sdks/python/examples/ai_chat/frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
sdks/python/examples/ai_chat/scripts/: validate-compose-startup.sh
sdks/python/examples/base/: README.md  conftest.py  pyproject.toml
sdks/python/examples/base/src/base/: main.py  otel_config.py
sdks/python/examples/getting_started/: README.md
sdks/python/src/junjo/: __init__.py  _identity.py  _json.py  _lifecycle.py  _terminal.py  condition.py  correlation.py  edge.py  eval.py  graph.py  hooks.py  node.py  run_concurrent.py  store.py  workflow.py  workflow_errors.py
sdks/python/src/junjo/agent/: __init__.py  _boundary.py  _runtime.py  _schema.py  _state.py  _telemetry.py  definition.py  errors.py  json.py  messages.py  model_driver.py  result.py  state.py  testing.py  tool.py
sdks/python/src/junjo/telemetry/: diagnostics.py  junjo_otel_exporter.py  otel_schema.py  payload.py  span_lifecycle.py  store_evidence.py
sdks/python/tests/: test_agent_composition_concurrency.py  test_agent_contracts.py  test_agent_execution.py  test_agent_failures_and_cancellation.py  test_agent_producer_conformance.py  test_agent_telemetry.py  test_agent_typing.py  test_diagnostic_portability.py  test_execution_result.py  test_execution_runtime_failures.py  test_graph_compile.py  test_graph_serialization.py  test_graph_validation.py  test_hooks.py  test_junjo_otel_exporter.py  test_logging.py  test_node_evaluation.py  test_run_concurrent_cancellation_telemetry.py  test_state_snapshot_isolation.py  test_store_state_serialization.py  test_store_telemetry_v2.py  test_telemetry_contract.py
sdks/python/tests/typing/: agent_invalid.py  agent_valid.py
(+1044 files in other folders)
