[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "junjo"
version = "0.1.0"
description = "A simple graph execution and state machine library for building AI agentic workflows."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Matthew Rideout", email = "boon4376@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "grpcio>=1.70.0",
    "jsonpatch>=1.33",
    "nanoid>=2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "furo",
    "pytest",
    "pytest-asyncio",
    "ruff~=0.9.5",
    "sphinx-rtd-theme",
    "mypy",
    "grpcio-tools",
]
graphviz = ["graphviz"]

[tool.mypy]
files = ["src"]
strict = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",                          # Verbose output
    "-Werror::DeprecationWarning", # Treat deprecation warnings as errors
]

[tool.ruff]
# https://docs.astral.sh/ruff/settings/
line-length = 120        # Default, compatible with Black
target-version = "py312" # Or your project's Python version
indent-width = 4         # Default, compatible with Black

# Formatting options (optional - Ruff's formatter is Black-compatible by default)
[tool.ruff.format]
quote-style = "double" # Or "single"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C", "B"]
ignore = ["B006"]

[tool.ruff.lint.per-file-ignores]
"tests/junjo/test_*.py" = ["D", "F401"] # ignore docstring rules in tests

[tool.uv.workspace]
members = ["examples/ai_chat/backend", "examples/base"]

[tool.uv.sources]
junjo = { workspace = true }
