# examples/dev/pyproject.toml
[project]
name = "junjo-dev-example"
version = "0.1.0"
description = "Development example for junjo"
dependencies = [
  "junjo @ { path = '../../src', develop = true }", # KEY: Local path dependency!
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
