[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "base"
version = "0.1.0"
description = "Development example for junjo"
requires-python = ">=3.11"
dependencies = [
  "google-genai>=1.48.0",
  "junjo",
  "load-dotenv>=0.1.0",
  "openinference-instrumentation-google-genai>=0.1.6",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff~=0.15.0"]

[tool.ruff]
# https://docs.astral.sh/ruff/settings/
line-length = 120        # Default, compatible with Black
target-version = "py311" # Or your project's Python version
indent-width = 4         # Default, compatible with Black

# Formatting options (optional - Ruff's formatter is Black-compatible by default)
[tool.ruff.format]
quote-style = "double" # Or "single"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C", "B"]
ignore = ["B006"]

[tool.ruff.lint.per-file-ignores]
"tests/junjo/test_*.py" = ["D", "F401"] # ignore docstring rules in tests
"**/node.py" = ["C901"]                 # allow higher complexity in workflow node services

[tool.uv.sources]
junjo = { workspace = true }

[dependency-groups]
dev = ["ruff>=0.15.0"]

[tool.setuptools.packages.find]
where = ["src"]
