[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "junjo-ai-chat-example"
version = "0.1.0"
description = "Deterministic Junjo Workflow and Agent composition example"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.115.10",
    "junjo",
    "opentelemetry-sdk>=1.37.0",
    "pydantic>=2.12.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff~=0.15.0",
    "ty",
]

[tool.uv.sources]
junjo = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C", "B"]

[tool.ruff.lint.per-file-ignores]
"**/nodes.py" = ["C901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
